fixed modal layout issue

--- a/resources/assets/sass/core/_modal.scss
+++ b/resources/assets/sass/core/_modal.scss
@@ -86,3 +86,7 @@
     width: 680px;
   }
 }
+
+.modal-open .modal {
+  z-index: 9999;
+}
